[package]
name = "tui-realm-textarea"
version = "1.2.0"
authors = ["Christian Visintin"]
edition = "2021"
categories = ["command-line-utilities"]
description = "textarea component for tui-realm"
documentation = "https://docs.rs/tui-realm-textarea"
homepage = "https://github.com/veeso/tui-realm-textarea"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["tui", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso/tui-realm-textarea"

[dependencies]
cli-clipboard = { version = "^0.4", optional = true }
lazy-regex = "^3"
tuirealm = { version = "^1.9.0", default-features = false, features = [
  "derive",
] }
tui-textarea = { version = "^0.2", default-features = false }

[dev-dependencies]
crossterm = "^0.27"
pretty_assertions = "^1.0.0"
tui-realm-stdlib = "^1.1.6"

[features]
default = ["ratatui-crossterm"]
clipboard = ["cli-clipboard"]
ratatui = ["tuirealm/ratatui"]
ratatui-crossterm = [
  "ratatui",
  "tuirealm/crossterm",
  "tui-textarea/ratatui-crossterm",
]
ratatui-termion = [
  "ratatui",
  "tuirealm/termion",
  "tui-textarea/ratatui-termion",
]
tui = ["tuirealm/tui"]
tui-crossterm = ["tui", "tuirealm/crossterm", "tui-textarea/crossterm"]
tui-termion = ["ratatui", "tuirealm/termion", "tui-textarea/termion"]

[[example]]
name = "demo"
path = "examples/demo.rs"
